+ complete Auth service documentation
