# storage/api-docs/api-docs.json
@@ -5,7 +5,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/login": {
+        "/api/v1/login": {
             "post": {
                 "tags": [
                     "auth"
@@ -18,14 +18,15 @@
                             "schema": {
                                 "properties": {
                                     "email": {
-                                        "description": "User's email",
                                         "type": "string",
-                                        "format": "email"
+                                        "format": "email",
+                                        "example": "example@gmail.com"
                                     },
                                     "password": {
-                                        "description": "User's password",
+                                        "description": "Must be greater than 6",
                                         "type": "string",
-                                        "format": "password"
+                                        "format": "password",
+                                        "example": "password"
                                     }
                                 },
                                 "type": "object"
@@ -43,7 +44,7 @@
                 }
             }
         },
-        "/register": {
+        "/api/v1/register": {
             "post": {
                 "tags": [
                     "auth"
@@ -66,14 +67,15 @@
                                         "nullable": true
                                     },
                                     "email": {
-                                        "description": "User's email",
                                         "type": "string",
-                                        "format": "email"
+                                        "format": "email",
+                                        "example": "example@gmail.com"
                                     },
                                     "password": {
-                                        "description": "User's password",
+                                        "description": "Must be greater than 6",
                                         "type": "string",
-                                        "format": "password"
+                                        "format": "password",
+                                        "example": "password"
                                     }
                                 },
                                 "type": "object"
